<resources>
    <string name="app_name">PracticaTema7</string>
    <string name="action_settings">Settings</string>
    <string name="nombre" translatable="false">Nombre:</string>
    <string name="categoria" translatable="false">Categoría:</string>
    <string name="longitud" translatable="false">Longitud:</string>
    <string name="latitud" translatable="false">Latitud:</string>
    <string name="valoracion" translatable="false">Valoración:</string>
    <string name="comentarios" translatable="false">Comentarios:</string>
    <string-array name="categorias">
        <item>@string/cat1</item>
        <item>@string/cat2</item>
        <item>@string/cat3</item>
        <item>@string/cat4</item>
        <item>@string/cat5</item>
    </string-array>


    <string name="escribe" translatable="false">Escribe aquí...</string>
    <string name="lugares" translatable="false">Mis lugares favoritos</string>
    <string name="guardar" translatable="false">Guardar</string>
    <string name="toastBD" translatable="false">Sitio creado ehorabuena.</string>
    <string name="cat1" translatable="false">Bar</string>
    <string name="cat2" translatable="false">Gasolinera</string>
    <string name="cat3" translatable="false">Pub</string>
    <string name="cat4" translatable="false">Comida rápida</string>
    <string name="cat5" translatable="false">Tienda</string>
    <string name="edit" translatable="false">Editar</string>
    <string name="eliminar" translatable="false">Eliminar</string>
    <string name="Sitioeliminado" translatable="false">Sitio eliminado correctamente</string>
    <string name="Sitioedit" translatable="false">Sitio editado correctamente</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_pantalla_mapa">Map</string>
</resources>
